@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: javaInterp.test,v 1.2 2000/12/22 09:47:15 mdejong Exp $
+# RCS: @(#) $Id: javaInterp.test,v 1.3 2002/07/23 10:19:53 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -571,6 +571,23 @@ test javaInterp-22.9 {Java_tcl_lang_Interp_pkgRequire} {
     set result
 } {1.3}
 
+test javaInterp-23.1 {If dispose is not called for an interp, the
+        dispose method will print an message to stderr} {
+    set script {
+set i [java::new tcl.lang.Interp]
+#$i dispose
+unset i
+java::call System runFinalizersOnExit 1
+java::call System exit 0
+}
+    catch \
+    {exec $env(JAVA) -classpath $env(CLASSPATH) tests.JavaEval $script} \
+    err
+    # The interp we did not dispose of and the interp
+    # we exited from via Java print an error here!
+    set err
+} {finalized interp has not been disposed
+finalized interp has not been disposed}
 
 
 # JavaGetInterp is already tested by the rest of this file
